deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: data-frontend
  name: data-frontend
  namespace: zhishuyun
spec:
  ports:
    - name: '8083'
      port: 8083
      targetPort: 80
  selector:
    app: data-frontend
