deploy/production/studio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: studio-frontend
  name: studio-frontend
  namespace: acedatacloud
spec:
  ports:
    - name: '8085'
      port: 8085
      targetPort: 80
  selector:
    app: studio-frontend
