deploy/production/studio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studio-frontend
  namespace: acedatacloud
  annotations:
    kubernetes.io/ingress.class: nginx-router
    kubernetes.io/ingress.rule-mix: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - studio.acedata.cloud
        - '*.studio.acedata.cloud'
      secretName: tls-wildcard-acedata-cloud
  rules:
    - host: studio.acedata.cloud
      http:
        paths:
          - path: /assets/
            pathType: Prefix
            backend:
              service:
                name: studio-frontend
                port:
                  number: 8085
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: studio-frontend
                port:
                  number: 8085
          - path: /favicon.ico
            pathType: Exact
            backend:
              service:
                name: studio-frontend
                port:
                  number: 8085
          - path: /apple-touch-icon.png
            pathType: Exact
            backend:
              service:
                name: studio-frontend
                port:
                  number: 8085
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-studio-internal
                port:
                  number: 8080
    - host: '*.studio.acedata.cloud'
      http:
        paths:
          - path: /assets/
            pathType: Prefix
            backend:
              service:
                name: studio-frontend
                port:
                  number: 8085
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: studio-frontend
                port:
                  number: 8085
          - path: /favicon.ico
            pathType: Exact
            backend:
              service:
                name: studio-frontend
                port:
                  number: 8085
          - path: /apple-touch-icon.png
            pathType: Exact
            backend:
              service:
                name: studio-frontend
                port:
                  number: 8085
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-studio-internal
                port:
                  number: 8080
